--- a/assets/pug/pages/template/email.pug
+++ b/assets/pug/pages/template/email.pug
@@ -176,8 +176,8 @@ html(lang='en')
               input(type="text" class="w-full text-xs font-semibold bg-transparent text-content3" value="Here’s the secret on how we can help raw succeed")
             div.py-3.flex.items-center
               textarea(placeholder="Message.." row="10" id="reply" class="dark:bg-sidebar-dark2 py-1 pl-[8px] pr-[55px] min-h-max").w-full.rounded-5.text-xs.text-content
-            div
-              input(type="file" class="email-dropzone dark:bg-sidebar-dark2")
+            div(class="dark:bg-sidebar-dark2")
+              input(type="file" class="email-dropzone")
         div.modal-footer
           div.flex.items-center.justify-between.gap-2
             ul.flex.items-center.gap-3
