--- a/html/template/add-product.html
+++ b/html/template/add-product.html
@@ -1026,7 +1026,7 @@
                     </div>
                     <div class="col-span-6 2md:col-span-6 sm:col-span-12">
                       <label for="brand">Brand</label>
-                      <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px]" id="brand" aria-label="Default select example">
+                      <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:border-border-dark" id="brand" aria-label="Default select example">
                         <option selected="">Dior</option>
                         <option value="1">Gucci</option>
                         <option value="2">louis vuitton</option>
@@ -1040,7 +1040,7 @@
                   <div class="grid grid-cols-12 gap-5">
                     <div class="col-span-4 2md:col-span-6 sm:col-span-12">
                       <label for="gender">Gender</label>
-                      <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px]" id="gender" aria-label="Default select example">
+                      <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:border-border-dark" id="gender" aria-label="Default select example">
                         <option selected="">Female</option>
                         <option value="1">Male </option>
                         <option value="2">All</option>
@@ -1060,7 +1060,7 @@
                   <div class="grid grid-cols-12 gap-5"> 
                     <div class="col-span-6 2md:col-span-6 sm:col-span-12">
                       <label for="tax">Tax</label>
-                      <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px]" id="tax" aria-label="Default select example">
+                      <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:border-border-dark" id="tax" aria-label="Default select example">
                         <option selected="">Choose Tax</option>
                         <option value="1">2% </option>
                         <option value="2">3%</option>
@@ -1087,21 +1087,21 @@
                 <form class="flex flex-col gap-4 m-0 theme-form">
                   <div> 
                     <label for="publishStatus">Status</label>
-                    <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px]" id="publishStatus" aria-label="Default select example">
+                    <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:border-border-dark" id="publishStatus" aria-label="Default select example">
                       <option selected="">Published</option>
                       <option value="1">Draft</option>
                     </select>
                   </div>
                   <div> 
                     <label for="publishVisible">Visibility</label>
-                    <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px]" id="publishVisible" aria-label="Default select example">
+                    <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:border-border-dark" id="publishVisible" aria-label="Default select example">
                       <option selected="">Hidden</option>
                       <option value="1">Public</option>
                     </select>
                   </div>
                   <div> 
                     <label for="category">Product Category</label>
-                    <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px]" id="category" aria-label="Default select example">
+                    <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:border-border-dark" id="category" aria-label="Default select example">
                       <option selected="">Applications</option>
                       <option value="1">Grocery</option>
                       <option value="2">Fashion</option>
