--- a/html/template/calendar.html
+++ b/html/template/calendar.html
@@ -1016,7 +1016,7 @@
                       <div class="fc-event fc-h-event fc-daygrid-event fc-daygrid-block-event bg-secondary-extralight p-3 text-sm mb-3 border-0">
                         <div class="fc-event-main !text-secondary">Event</div>
                       </div>
-                      <div class="fc-event fc-h-event fc-daygrid-event fc-daygrid-block-event bg-success-light p-3 text-sm mb-3 border-0">
+                      <div class="fc-event fc-h-event fc-daygrid-event fc-daygrid-block-event bg-success-light p-3 text-sm mb-3 border-0 dark:bg-sidebar-dark2">
                         <div class="fc-event-main !text-success">Birthday Party</div>
                       </div>
                       <div class="fc-event fc-h-event fc-daygrid-event fc-daygrid-block-event bg-warning-light p-3 text-sm mb-3 border-0">
@@ -1032,7 +1032,7 @@
                     </div>
                     <h5 class="mt-5 mb-4 text-title font-semibold">My Schedule</h5>
                     <div class="flex flex-col gap-4">
-                      <div class="card shadow-sm border-2 border-light w-[230px] 3sm:w-[220px]"> 
+                      <div class="card shadow-sm border-2 border-light w-[230px] 3sm:w-[220px] dark:border-border-dark dark:border-2"> 
                         <div class="card-body flex flex-col gap-4">
                           <div>
                             <h4 class="text-xs font-semibold">Design Review </h4>
@@ -1044,7 +1044,7 @@
                           </div>
                         </div>
                         <div class="card-footer"> 
-                          <div class="flex justify-between items-center pt-4 border-t border-dashed border-border-light">
+                          <div class="flex justify-between items-center pt-4 border-t border-dashed border-border-light dark:border-border-dark dark:border-t">
                             <div class="flex items-center gap-2 w-full">
                               <div class="avatar rounded-full w-10 h-10"><img src="../../assets/images/user-app/15.png" alt="user"></div>
                               <div class="w-[calc(100%_-_52px)] grid">
