--- a/html/template/cart.html
+++ b/html/template/cart.html
@@ -1016,9 +1016,9 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr class="hover:bg-gray-light cart-item">
+                      <tr class="hover:bg-gray-light dark:hover:bg-sidebar-dark2 cart-item">
                         <td class="min-w-[180px]">
-                          <div class="flex items-center gap-2"><img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/1.jpg" alt="Samsung TV">
+                          <div class="flex items-center gap-2"> <img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/1.jpg" alt="Samsung TV">
                             <div>
                               <h4 class="text-xs font-semibold text-title">Samsung TV</h4><span class="text-[0.813rem] font-medium text-content">#GS-4567</span>
                             </div>
@@ -1057,9 +1057,9 @@
                           </div>
                         </td>
                       </tr>
-                      <tr class="hover:bg-gray-light cart-item">
+                      <tr class="hover:bg-gray-light dark:hover:bg-sidebar-dark2 cart-item">
                         <td class="min-w-[180px]">
-                          <div class="flex items-center gap-2"><img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/2.jpg" alt="Spring Bed">
+                          <div class="flex items-center gap-2"> <img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/2.jpg" alt="Spring Bed">
                             <div>
                               <h4 class="text-xs font-semibold text-title">Spring Bed</h4><span class="text-[0.813rem] font-medium text-content">#GS-6567</span>
                             </div>
@@ -1098,9 +1098,9 @@
                           </div>
                         </td>
                       </tr>
-                      <tr class="hover:bg-gray-light cart-item">
+                      <tr class="hover:bg-gray-light dark:hover:bg-sidebar-dark2 cart-item">
                         <td class="min-w-[180px]">
-                          <div class="flex items-center gap-2"><img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/3.jpg" alt="Long Dress">
+                          <div class="flex items-center gap-2"> <img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/3.jpg" alt="Long Dress">
                             <div>
                               <h4 class="text-xs font-semibold text-title">Long Dress</h4><span class="text-[0.813rem] font-medium text-content">#GS-9211</span>
                             </div>
@@ -1139,9 +1139,9 @@
                           </div>
                         </td>
                       </tr>
-                      <tr class="hover:bg-gray-light cart-item">
+                      <tr class="hover:bg-gray-light dark:hover:bg-sidebar-dark2 cart-item">
                         <td class="min-w-[180px]">
-                          <div class="flex items-center gap-2"><img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/4.jpg" alt="Phillip Lightbulb">
+                          <div class="flex items-center gap-2"> <img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/4.jpg" alt="Phillip Lightbulb">
                             <div>
                               <h4 class="text-xs font-semibold text-title">Phillip Lightbulb</h4><span class="text-[0.813rem] font-medium text-content">#GS-5214</span>
                             </div>
@@ -1180,9 +1180,9 @@
                           </div>
                         </td>
                       </tr>
-                      <tr class="hover:bg-gray-light cart-item">
+                      <tr class="hover:bg-gray-light dark:hover:bg-sidebar-dark2 cart-item">
                         <td class="min-w-[180px]">
-                          <div class="flex items-center gap-2"><img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/5.jpg" alt="Ladies Handbags">
+                          <div class="flex items-center gap-2"> <img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/5.jpg" alt="Ladies Handbags">
                             <div>
                               <h4 class="text-xs font-semibold text-title">Ladies Handbags</h4><span class="text-[0.813rem] font-medium text-content">#GS-65411</span>
                             </div>
@@ -1221,9 +1221,9 @@
                           </div>
                         </td>
                       </tr>
-                      <tr class="hover:bg-gray-light cart-item">
+                      <tr class="hover:bg-gray-light dark:hover:bg-sidebar-dark2 cart-item">
                         <td class="min-w-[180px]">
-                          <div class="flex items-center gap-2"><img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/6.png" alt="Latest Cosmetics">
+                          <div class="flex items-center gap-2"> <img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/6.png" alt="Latest Cosmetics">
                             <div>
                               <h4 class="text-xs font-semibold text-title">Latest Cosmetics</h4><span class="text-[0.813rem] font-medium text-content">#GS-34611</span>
                             </div>
@@ -1262,9 +1262,9 @@
                           </div>
                         </td>
                       </tr>
-                      <tr class="hover:bg-gray-light cart-item">
+                      <tr class="hover:bg-gray-light dark:hover:bg-sidebar-dark2 cart-item">
                         <td class="min-w-[180px]">
-                          <div class="flex items-center gap-2"><img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/7.png" alt="Latest Nike shoes">
+                          <div class="flex items-center gap-2"> <img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/7.png" alt="Latest Nike shoes">
                             <div>
                               <h4 class="text-xs font-semibold text-title">Latest Nike shoes</h4><span class="text-[0.813rem] font-medium text-content">#GS-64247</span>
                             </div>
@@ -1303,9 +1303,9 @@
                           </div>
                         </td>
                       </tr>
-                      <tr class="hover:bg-gray-light cart-item">
+                      <tr class="hover:bg-gray-light dark:hover:bg-sidebar-dark2 cart-item">
                         <td class="min-w-[180px]">
-                          <div class="flex items-center gap-2"><img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/8.png" alt="Apple MacBook Air">
+                          <div class="flex items-center gap-2"> <img class="sm:w-[40px] sm:h-[40px] 5xl:w-[43px] 5xl:h-[43px] w-[45px] h-[45px] rounded-full" src="../../assets/images/product/8.png" alt="Apple MacBook Air">
                             <div>
                               <h4 class="text-xs font-semibold text-title">Apple MacBook Air</h4><span class="text-[0.813rem] font-medium text-content">#GS-3452</span>
                             </div>
@@ -1358,12 +1358,12 @@
                   <div class="flex flex-col gap-1 pb-4 border-b border-border-light dark:border-sidebar-dark2"> 
                     <label class="font-bold text-xs text-primary" for="coupon-code">Apply Coupon Code</label>
                     <div class="flex items-center justify-center"> 
-                      <input class="p-[11px] w-full rounded-br-none rounded-tr-none border border-border-light rounded-5 text-xs text-content rtl:rounded-br-5 rtl:rounded-bl-none rtl:rounded-tr-5 rtl:rounded-tl-none" type="text" placeholder="Enter code" id="coupon-code"><span class="flex items-center justify-center bg-primary text-white rounded-5 border-none rounded-bl-none rounded-tl-none font-medium text-xs py-[12px] px-[11px] rtl:rounded-bl-5 rtl:rounded-br-none rtl:rounded-tr-none rtl:rounded-tl-5">Apply</span>
+                      <input class="p-[11px] dark:bg-sidebar-dark2 dark:text-white dark:border-border-dark w-full rounded-br-none rounded-tr-none border border-border-light rounded-5 text-xs text-content rtl:rounded-br-5 rtl:rounded-bl-none rtl:rounded-tr-5 rtl:rounded-tl-none" type="text" placeholder="Enter code" id="coupon-code"><span class="flex items-center justify-center bg-primary text-white rounded-5 border-none rounded-bl-none rounded-tl-none font-medium text-xs py-[12px] px-[11px] rtl:rounded-bl-5 rtl:rounded-br-none rtl:rounded-tr-none rtl:rounded-tl-5">Apply</span>
                     </div>
                   </div>
                   <ul class="flex flex-col gap-2 py-1 pb-4 border-b border-border-light dark:border-sidebar-dark2">
                     <li class="flex items-center justify-between text-content font-bold">
-                      <h6>Subtotal  </h6>
+                      <h6>Subtotal</h6>
                       <h6>$511 </h6>
                     </li>
                     <li class="flex items-center justify-between text-secondary font-bold">
