--- a/html/template/email.html
+++ b/html/template/email.html
@@ -1545,8 +1545,8 @@
             <div class="py-3 flex items-center">
               <textarea class="dark:bg-sidebar-dark2 py-1 pl-[8px] pr-[55px] min-h-max w-full rounded-5 text-xs text-content" placeholder="Message.." row="10" id="reply"></textarea>
             </div>
-            <div>
-              <input class="email-dropzone dark:bg-sidebar-dark2" type="file">
+            <div class="dark:bg-sidebar-dark2">
+              <input class="email-dropzone" type="file">
             </div>
           </form>
         </div>
