--- a/html/template/invoice.html
+++ b/html/template/invoice.html
@@ -1008,22 +1008,22 @@
                   <div class="flex gap-2 justify-between items-center 3sm:flex-col 3sm:items-end"> 
                     <div class="flex item-center gap-2"> 
                       <div class="dropdown">
-                        <button class="btn border border-border-light flex gap-1 text-content items-center !p-[0.7rem]">Action
+                        <button class="btn border border-border-light flex gap-1 text-content items-center !p-[0.7rem] dark:border-border-dark">Action
                           <svg class="w-[20px] h-[20px] stroke-content"> 
                             <use href="../../assets/svg/sprite.svg#Arrow-Down-2"> </use>
                           </svg>
                         </button>
                         <div class="dropdown-menu !w-36 !top-11 left-0 !p-2">
                           <ul class="flex flex-col cursor-pointer !gap-0">
-                            <li class="px-2 py-1 rounded hover:bg-gray-light">Select All</li>
-                            <li class="px-2 py-1 rounded hover:bg-gray-light">Edit</li>
-                            <li class="px-2 py-1 rounded hover:bg-gray-light">Move to trash</li>
+                            <li class="px-2 py-1 rounded hover:bg-gray-light dark:hover:bg-sidebar-dark2">Select All</li>
+                            <li class="px-2 py-1 rounded hover:bg-gray-light dark:hover:bg-sidebar-dark2">Edit</li>
+                            <li class="px-2 py-1 rounded hover:bg-gray-light dark:hover:bg-sidebar-dark2">Move to trash</li>
                           </ul>
                         </div>
                       </div>
                     </div>
                     <div class="flex items-center m-0">
-                      <input class="py-[11px] px-[25px] border rounded w-full text-xs text-Gray-darker rounded-tr-none rounded-br-none rounded-br-5 rtl:rounded-bl-none rounded-tr-5 rtl:rounded-tl-none" type="Search" placeholder="Search">
+                      <input class="py-[11px] px-[25px] dark:bg-sidebar-dark2 dark:border-border-dark dark:text-white rounded-br-5 rtl:rounded-bl-none rounded-tr-5 rtl:rounded-tl-none border rounded w-full text-xs text-Gray-darker rounded-tr-none rounded-br-none" type="Search" placeholder="Search">
                       <button class="bg-primary text-white rounded border-none p-3 rounded-tl-none rounded-bl-none rtl:rounded-bl-5 rtl:rounded-br-none rtl:rounded-tr-none rtl:rounded-tl-5">
                         <svg class="w-[20px] h-[20px] stroke-white"> 
                           <use href="../../assets/svg/sprite.svg#Search"> </use>
@@ -1046,12 +1046,12 @@
                         </tr>
                       </thead>
                       <tbody> 
-                        <tr class="hover:bg-gray-light invoice-item">
-                          <td class="min-w-[210px]"> 
+                        <tr class="hover:bg-gray-light dark:hover:bg-sidebar-dark2 invoice-item">
+                          <td class="min-w-[210px]">
                             <div class="flex items-center gap-2">
                               <label class="checkbox cursor-pointer block w-4 h-4"> 
                                 <input class="peer" type="checkbox">
-                                <div class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"></i></div>
+                                <div class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"> </i></div>
                               </label>
                               <div class="flex items-center gap-[.5625rem]"> <img class="w-10 h-10 rounded-full" src="../../assets/images/product/1.jpg" alt="Samsung TV">
                                 <div><a href="invoice-preview.html">
@@ -1110,12 +1110,12 @@
                             </div>
                           </td>
                         </tr>
-                        <tr class="hover:bg-gray-light invoice-item">
-                          <td class="min-w-[210px]"> 
+                        <tr class="hover:bg-gray-light dark:hover:bg-sidebar-dark2 invoice-item">
+                          <td class="min-w-[210px]">
                             <div class="flex items-center gap-2">
                               <label class="checkbox cursor-pointer block w-4 h-4"> 
                                 <input class="peer" type="checkbox">
-                                <div class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"></i></div>
+                                <div class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"> </i></div>
                               </label>
                               <div class="flex items-center gap-[.5625rem]"> <img class="w-10 h-10 rounded-full" src="../../assets/images/product/2.jpg" alt="Spring Bed">
                                 <div><a href="invoice-preview.html">
@@ -1174,12 +1174,12 @@
                             </div>
                           </td>
                         </tr>
-                        <tr class="hover:bg-gray-light invoice-item">
-                          <td class="min-w-[210px]"> 
+                        <tr class="hover:bg-gray-light dark:hover:bg-sidebar-dark2 invoice-item">
+                          <td class="min-w-[210px]">
                             <div class="flex items-center gap-2">
                               <label class="checkbox cursor-pointer block w-4 h-4"> 
                                 <input class="peer" type="checkbox">
-                                <div class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"></i></div>
+                                <div class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"> </i></div>
                               </label>
                               <div class="flex items-center gap-[.5625rem]"> <img class="w-10 h-10 rounded-full" src="../../assets/images/product/3.jpg" alt="Long Dress">
                                 <div><a href="invoice-preview.html">
@@ -1238,12 +1238,12 @@
                             </div>
                           </td>
                         </tr>
-                        <tr class="hover:bg-gray-light invoice-item">
-                          <td class="min-w-[210px]"> 
+                        <tr class="hover:bg-gray-light dark:hover:bg-sidebar-dark2 invoice-item">
+                          <td class="min-w-[210px]">
                             <div class="flex items-center gap-2">
                               <label class="checkbox cursor-pointer block w-4 h-4"> 
                                 <input class="peer" type="checkbox">
-                                <div class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"></i></div>
+                                <div class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"> </i></div>
                               </label>
                               <div class="flex items-center gap-[.5625rem]"> <img class="w-10 h-10 rounded-full" src="../../assets/images/product/4.jpg" alt="Phillip Lightbulb">
                                 <div><a href="invoice-preview.html">
@@ -1302,12 +1302,12 @@
                             </div>
                           </td>
                         </tr>
-                        <tr class="hover:bg-gray-light invoice-item">
-                          <td class="min-w-[210px]"> 
+                        <tr class="hover:bg-gray-light dark:hover:bg-sidebar-dark2 invoice-item">
+                          <td class="min-w-[210px]">
                             <div class="flex items-center gap-2">
                               <label class="checkbox cursor-pointer block w-4 h-4"> 
                                 <input class="peer" type="checkbox">
-                                <div class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"></i></div>
+                                <div class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"> </i></div>
                               </label>
                               <div class="flex items-center gap-[.5625rem]"> <img class="w-10 h-10 rounded-full" src="../../assets/images/product/5.jpg" alt="Ladies Handbags">
                                 <div><a href="invoice-preview.html">
@@ -1366,12 +1366,12 @@
                             </div>
                           </td>
                         </tr>
-                        <tr class="hover:bg-gray-light invoice-item">
-                          <td class="min-w-[210px]"> 
+                        <tr class="hover:bg-gray-light dark:hover:bg-sidebar-dark2 invoice-item">
+                          <td class="min-w-[210px]">
                             <div class="flex items-center gap-2">
                               <label class="checkbox cursor-pointer block w-4 h-4"> 
                                 <input class="peer" type="checkbox">
-                                <div class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"></i></div>
+                                <div class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"> </i></div>
                               </label>
                               <div class="flex items-center gap-[.5625rem]"> <img class="w-10 h-10 rounded-full" src="../../assets/images/product/6.png" alt="Latest Cosmetics">
                                 <div><a href="invoice-preview.html">
@@ -1430,12 +1430,12 @@
                             </div>
                           </td>
                         </tr>
-                        <tr class="hover:bg-gray-light invoice-item">
-                          <td class="min-w-[210px]"> 
+                        <tr class="hover:bg-gray-light dark:hover:bg-sidebar-dark2 invoice-item">
+                          <td class="min-w-[210px]">
                             <div class="flex items-center gap-2">
                               <label class="checkbox cursor-pointer block w-4 h-4"> 
                                 <input class="peer" type="checkbox">
-                                <div class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"></i></div>
+                                <div class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"> </i></div>
                               </label>
                               <div class="flex items-center gap-[.5625rem]"> <img class="w-10 h-10 rounded-full" src="../../assets/images/product/7.png" alt="Latest Nike shoes">
                                 <div><a href="invoice-preview.html">
@@ -1494,12 +1494,12 @@
                             </div>
                           </td>
                         </tr>
-                        <tr class="hover:bg-gray-light invoice-item">
-                          <td class="min-w-[210px]"> 
+                        <tr class="hover:bg-gray-light dark:hover:bg-sidebar-dark2 invoice-item">
+                          <td class="min-w-[210px]">
                             <div class="flex items-center gap-2">
                               <label class="checkbox cursor-pointer block w-4 h-4"> 
                                 <input class="peer" type="checkbox">
-                                <div class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"></i></div>
+                                <div class="checkbox-indicator peer-checked:!bg-primary !border-primary"> <i data-feather="check"> </i></div>
                               </label>
                               <div class="flex items-center gap-[.5625rem]"> <img class="w-10 h-10 rounded-full" src="../../assets/images/product/8.png" alt="Apple MacBook Air">
                                 <div><a href="invoice-preview.html">
@@ -1565,15 +1565,15 @@
                 <div class="card-footer">
                   <div class="flex justify-between items-center flex-wrap sm:flex-col sm:items-end">
                     <div class="flex items-center">
-                      <button class="btn border border-border-light rounded-none flex items-center gap-2 hover:bg-primary group hover:text-white"> 
+                      <button class="btn border border-border-light rounded-none flex items-center gap-2 hover:bg-primary dark:border-border-dark group hover:text-white"> 
                         <svg class="w-4 h-4 stroke-title group-hover:stroke-white"> 
                           <use href="../../assets/svg/sprite.svg#Arrow-Left-2"> </use>
-                        </svg><span class="sm:hidden">Preview  </span>
+                        </svg><span class="sm:hidden">Preview</span>
                       </button>
-                      <button class="btn border border-border-light rounded-none text-title hover:bg-primary hover:text-white">1</button>
-                      <button class="btn btn-active text-white border border-border-light bg-primary rounded-none hover:bg-primary hover:text-white">2</button>
-                      <button class="btn border border-border-light rounded-none text-title hover:bg-primary hover:text-white">3</button>
-                      <button class="btn border border-border-light rounded-none flex items-center gap-2 hover:bg-primary group hover:text-white"> <span class="sm:hidden">Next</span>
+                      <button class="btn border border-border-light rounded-none text-title hover:bg-primary dark:border-border-dark hover:text-white">1</button>
+                      <button class="btn btn-active text-white border border-border-light bg-primary rounded-none hover:bg-primary dark:border-border-dark hover:text-white">2</button>
+                      <button class="btn border border-border-light rounded-none text-title hover:bg-primary dark:border-border-dark hover:text-white">3</button>
+                      <button class="btn border border-border-light rounded-none flex items-center gap-2 hover:bg-primary dark:border-border-dark group hover:text-white"> <span class="sm:hidden">Next</span>
                         <svg class="w-4 h-4 stroke-title group-hover:stroke-white"> 
                           <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                         </svg>
