--- a/html/template/knowledgebase.html
+++ b/html/template/knowledgebase.html
@@ -1003,9 +1003,9 @@
             <div class="col-span-12">
               <div class="relative"><img class="w-full rounded-5 min-h-[100px] max-h-[300px] object-cover drop-shadow-md" src="../../assets/images/svg/liness.svg" alt="lines">
                 <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full max-w-[40%] lg:max-w-[75%] xl:max-w-[50%]">
-                  <h3 class="mb-4 text-[33px] font-extrabold text-title lg:text-lg">How Can I help you?</h3>
+                  <h3 class="mb-4 text-[33px] font-extrabold text-title lg:text-lg dark:text-black">How Can I help you?</h3>
                   <div class="search-box relative">
-                    <input class="border-border-light border rounded-5 w-full py-[11px] pl-[25px] pr-[55px] md:py-[5px] text-xs font-semibold text-title" placeholder="Type to Search..." type="search">
+                    <input class="border-border-light dark:border-border-dark dark:bg-sidebar-dark2 border rounded-5 w-full py-[11px] pl-[25px] pr-[55px] md:py-[5px] text-xs font-semibold text-title" placeholder="Type to Search..." type="search">
                     <svg class="xl:hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] absolute"> 
                       <use href="../../assets/svg/sprite.svg#Search"> </use>
                     </svg>
@@ -1030,14 +1030,14 @@
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Yen and 242 Others  </span></a>
                     <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
                       </div>
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/18.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/18.jpg" alt="avatar"></div>
                       </div>
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/24.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/24.jpg" alt="avatar"></div>
                       </div>
                     </div>
                   </div>
@@ -1065,14 +1065,14 @@
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Wilt and 126 Others  </span></a>
                     <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
                       </div>
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/18.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/16.jpg" alt="avatar"></div>
                       </div>
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/24.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/2.jpg" alt="avatar"></div>
                       </div>
                     </div>
                   </div>
@@ -1100,14 +1100,14 @@
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Bran and 186 Others  </span></a>
                     <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/22.jpg" alt="avatar"></div>
                       </div>
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/18.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/26.jpg" alt="avatar"></div>
                       </div>
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/24.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/3.jpg" alt="avatar"></div>
                       </div>
                     </div>
                   </div>
@@ -1135,14 +1135,14 @@
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Dou and 96 Others  </span></a>
                     <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
                       </div>
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/18.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/25.jpg" alt="avatar"></div>
                       </div>
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/24.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/22.jpg" alt="avatar"></div>
                       </div>
                     </div>
                   </div>
@@ -1170,14 +1170,14 @@
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Bets and 154 Others </span></a>
                     <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/1.jpg" alt="avatar"></div>
                       </div>
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/18.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/6.jpg" alt="avatar"></div>
                       </div>
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/24.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/4.jpg" alt="avatar"></div>
                       </div>
                     </div>
                   </div>
@@ -1205,14 +1205,14 @@
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Robed and 198 Others </span></a>
                     <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/5.jpg" alt="avatar"></div>
                       </div>
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/18.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/2.jpg" alt="avatar"></div>
                       </div>
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/24.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/14.jpg" alt="avatar"></div>
                       </div>
                     </div>
                   </div>
@@ -1240,14 +1240,14 @@
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Virga and 126 Others </span></a>
                     <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/11.jpg" alt="avatar"></div>
                       </div>
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/18.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/12.jpg" alt="avatar"></div>
                       </div>
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/24.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/3.jpg" alt="avatar"></div>
                       </div>
                     </div>
                   </div>
@@ -1275,14 +1275,14 @@
                   <div class="flex justify-between"><a class="flex items-center gap-1" href="blog-grid.html">
                       <p class="text-content text-xs">Liked by  </p><span class="text-primary text-xs">Brent and 126 Others</span></a>
                     <div class="avatar-group -space-x-4 2md:hidden sm:flex 2sm:hidden">
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/15.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/10.jpg" alt="avatar"></div>
                       </div>
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/18.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/11.jpg" alt="avatar"></div>
                       </div>
-                      <div class="avatar border-white border-2 hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
-                        <div class="w-6"><img src="../../assets/images/avatar/24.jpg" alt="avatar"></div>
+                      <div class="avatar border-white border-2 dark:border-border-dark hover:translate-y-[-5px] hover:ease hover:transition-all transition-all translate-y-0">
+                        <div class="w-6 h-6"><img src="../../assets/images/avatar/16.jpg" alt="avatar"></div>
                       </div>
                     </div>
                   </div>
