--- a/html/template/select.html
+++ b/html/template/select.html
@@ -1009,7 +1009,7 @@
                 <div class="card-header pb-2 header-bottom-border">
                   <div class="flex flex-col">
                     <h3 class="text-lg font-bold">Custom Select</h3>
-                    <p>To set the custom select use <strong>.custom-select   </strong>& <strong>.select-style-1  </strong>class.</p>
+                    <p>To set the custom select use <strong>.custom-select</strong>& <strong>.select-style-1</strong>class.</p>
                     <div class="preview-code tab-links">
                       <button class="p-0 tab tab-lifted tab-active tab-link" data-tabFilter="1">Preview  </button>
                       <button class="p-0 tab tab-lifted tab-link tab-2" data-tabFilter="2">Html</button>
@@ -1064,9 +1064,9 @@
                 <div class="card-body">                                  
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
-                      <div class="flex items-center flex-col flex-wrap gap-2 my-2 dark:bg-sidebar-dark2">
-                        <div class="custom-select select-style-1 select-bg-white">
-                          <select>
+                      <div class="flex items-center flex-col flex-wrap gap-2 my-2">
+                        <div class="custom-select select-style-1 select-bg-white dark:select-bg-sidebar-dark2">
+                          <select> 
                             <option disabled="" selected="">Pick your favorite Simpson</option>
                             <option value="">Homer</option>
                             <option value="">Marge</option>
