--- a/html/template/todo.html
+++ b/html/template/todo.html
@@ -1074,7 +1074,7 @@
                 </div>
                 <div class="overflow-auto max-h-[478px] custom-scroll">
                   <ul class="mb-7 todo-list todo-app gap-[calc(8px_+_(20_-_8)_*_((100vw_-_320px)_/_(1920_-_320)))]"> 
-                    <li class="todo-item flex items-center gap-2 justify-between pt-[13px] mt-[13px] border-t border-light first:mt-0 first:pt-0 first:border-none"> 
+                    <li class="todo-item flex items-center gap-2 justify-between pt-[13px] mt-[13px] border-t border-light dark:border-border-dark dark:border-t first:mt-0 first:pt-0 first:border-none"> 
                       <div class="flex items-center justify-center">
                         <div class="check-custom flex items-center justify-center relative pl-[calc(10px_+_(15_-_10)_*_((100vw_-_320px)_/_(1920_-_320)))] pr-[calc(7px_+_(12_-_7)_*_((100vw_-_320px)_/_(1920_-_320)))] py-[3px]"><span class="absolute top-0 bottom-0 ltr:left-0 rtl:right-0 w-[3px] line h-full rounded-5"></span>
                           <div class="relative w-5 h-5">
@@ -1098,7 +1098,7 @@
                         </ul>
                       </div>
                     </li>
-                    <li class="todo-item flex items-center gap-2 justify-between pt-[13px] mt-[13px] border-t border-light first:mt-0 first:pt-0 first:border-none"> 
+                    <li class="todo-item flex items-center gap-2 justify-between pt-[13px] mt-[13px] border-t border-light dark:border-border-dark dark:border-t first:mt-0 first:pt-0 first:border-none"> 
                       <div class="flex items-center justify-center">
                         <div class="check-custom flex items-center justify-center relative pl-[calc(10px_+_(15_-_10)_*_((100vw_-_320px)_/_(1920_-_320)))] pr-[calc(7px_+_(12_-_7)_*_((100vw_-_320px)_/_(1920_-_320)))] py-[3px]"><span class="absolute top-0 bottom-0 ltr:left-0 rtl:right-0 w-[3px] line h-full rounded-5"></span>
                           <div class="relative w-5 h-5">
@@ -1122,7 +1122,7 @@
                         </ul>
                       </div>
                     </li>
-                    <li class="todo-item flex items-center gap-2 justify-between pt-[13px] mt-[13px] border-t border-light first:mt-0 first:pt-0 first:border-none"> 
+                    <li class="todo-item flex items-center gap-2 justify-between pt-[13px] mt-[13px] border-t border-light dark:border-border-dark dark:border-t first:mt-0 first:pt-0 first:border-none"> 
                       <div class="flex items-center justify-center">
                         <div class="check-custom flex items-center justify-center relative pl-[calc(10px_+_(15_-_10)_*_((100vw_-_320px)_/_(1920_-_320)))] pr-[calc(7px_+_(12_-_7)_*_((100vw_-_320px)_/_(1920_-_320)))] py-[3px]"><span class="absolute top-0 bottom-0 ltr:left-0 rtl:right-0 w-[3px] line h-full rounded-5"></span>
                           <div class="relative w-5 h-5">
@@ -1146,7 +1146,7 @@
                         </ul>
                       </div>
                     </li>
-                    <li class="todo-item flex items-center gap-2 justify-between pt-[13px] mt-[13px] border-t border-light first:mt-0 first:pt-0 first:border-none"> 
+                    <li class="todo-item flex items-center gap-2 justify-between pt-[13px] mt-[13px] border-t border-light dark:border-border-dark dark:border-t first:mt-0 first:pt-0 first:border-none"> 
                       <div class="flex items-center justify-center">
                         <div class="check-custom flex items-center justify-center relative pl-[calc(10px_+_(15_-_10)_*_((100vw_-_320px)_/_(1920_-_320)))] pr-[calc(7px_+_(12_-_7)_*_((100vw_-_320px)_/_(1920_-_320)))] py-[3px]"><span class="absolute top-0 bottom-0 ltr:left-0 rtl:right-0 w-[3px] line h-full rounded-5"></span>
                           <div class="relative w-5 h-5">
@@ -1170,7 +1170,7 @@
                         </ul>
                       </div>
                     </li>
-                    <li class="todo-item flex items-center gap-2 justify-between pt-[13px] mt-[13px] border-t border-light first:mt-0 first:pt-0 first:border-none"> 
+                    <li class="todo-item flex items-center gap-2 justify-between pt-[13px] mt-[13px] border-t border-light dark:border-border-dark dark:border-t first:mt-0 first:pt-0 first:border-none"> 
                       <div class="flex items-center justify-center">
                         <div class="check-custom flex items-center justify-center relative pl-[calc(10px_+_(15_-_10)_*_((100vw_-_320px)_/_(1920_-_320)))] pr-[calc(7px_+_(12_-_7)_*_((100vw_-_320px)_/_(1920_-_320)))] py-[3px]"><span class="absolute top-0 bottom-0 ltr:left-0 rtl:right-0 w-[3px] line h-full rounded-5"></span>
                           <div class="relative w-5 h-5">
@@ -1194,7 +1194,7 @@
                         </ul>
                       </div>
                     </li>
-                    <li class="todo-item flex items-center gap-2 justify-between pt-[13px] mt-[13px] border-t border-light first:mt-0 first:pt-0 first:border-none"> 
+                    <li class="todo-item flex items-center gap-2 justify-between pt-[13px] mt-[13px] border-t border-light dark:border-border-dark dark:border-t first:mt-0 first:pt-0 first:border-none"> 
                       <div class="flex items-center justify-center">
                         <div class="check-custom flex items-center justify-center relative pl-[calc(10px_+_(15_-_10)_*_((100vw_-_320px)_/_(1920_-_320)))] pr-[calc(7px_+_(12_-_7)_*_((100vw_-_320px)_/_(1920_-_320)))] py-[3px]"><span class="absolute top-0 bottom-0 ltr:left-0 rtl:right-0 w-[3px] line h-full rounded-5"></span>
                           <div class="relative w-5 h-5">
@@ -1218,7 +1218,7 @@
                         </ul>
                       </div>
                     </li>
-                    <li class="todo-item flex items-center gap-2 justify-between pt-[13px] mt-[13px] border-t border-light first:mt-0 first:pt-0 first:border-none"> 
+                    <li class="todo-item flex items-center gap-2 justify-between pt-[13px] mt-[13px] border-t border-light dark:border-border-dark dark:border-t first:mt-0 first:pt-0 first:border-none"> 
                       <div class="flex items-center justify-center">
                         <div class="check-custom flex items-center justify-center relative pl-[calc(10px_+_(15_-_10)_*_((100vw_-_320px)_/_(1920_-_320)))] pr-[calc(7px_+_(12_-_7)_*_((100vw_-_320px)_/_(1920_-_320)))] py-[3px]"><span class="absolute top-0 bottom-0 ltr:left-0 rtl:right-0 w-[3px] line h-full rounded-5"></span>
                           <div class="relative w-5 h-5">
@@ -1242,7 +1242,7 @@
                         </ul>
                       </div>
                     </li>
-                    <li class="todo-item flex items-center gap-2 justify-between pt-[13px] mt-[13px] border-t border-light first:mt-0 first:pt-0 first:border-none"> 
+                    <li class="todo-item flex items-center gap-2 justify-between pt-[13px] mt-[13px] border-t border-light dark:border-border-dark dark:border-t first:mt-0 first:pt-0 first:border-none"> 
                       <div class="flex items-center justify-center">
                         <div class="check-custom flex items-center justify-center relative pl-[calc(10px_+_(15_-_10)_*_((100vw_-_320px)_/_(1920_-_320)))] pr-[calc(7px_+_(12_-_7)_*_((100vw_-_320px)_/_(1920_-_320)))] py-[3px]"><span class="absolute top-0 bottom-0 ltr:left-0 rtl:right-0 w-[3px] line h-full rounded-5"></span>
                           <div class="relative w-5 h-5">
