--- a/assets/postcss/components/_email.css
+++ b/assets/postcss/components/_email.css
@@ -5,7 +5,7 @@
   .email-main {
     .email-read {
       li {
-        @apply  border-r  rtl:border-r-0 rtl:border-l border-border-light px-[.375rem];
+        @apply border-r  rtl:border-r-0 rtl:border-l border-border-light px-[.375rem];
 
         &:first-child,
         &:last-child {
@@ -40,10 +40,10 @@
       }
 
       .filepond--drop-label {
-        @apply border border-border-light rounded-5 bg-white;
+        @apply border border-border-light rounded-5 bg-white dark:bg-sidebar-dark2  dark:border-border-dark dark:text-content;
 
         label {
-          @apply bg-white;
+          @apply bg-white  dark:bg-sidebar-dark2;
 
           .filepond--label-action {
             @apply text-primary decoration-primary;
@@ -56,7 +56,7 @@
       }
 
       *:not(text) {
-        @apply bg-white;
+        @apply bg-white  dark:bg-sidebar-dark2;
       }
 
       .filepond--list {
@@ -66,7 +66,6 @@
 
             .filepond--file-action-button {
               &.filepond--action-remove-item {
-
                 &:hover,
                 &:focus {
                   @apply shadow-none;
@@ -98,7 +97,7 @@
 
       .filepond--panel {
         &.filepond--panel-root {
-          @apply border border-border-light;
+          @apply border border-border-light dark:border-border-dark;
         }
       }
     }
@@ -111,10 +110,10 @@
       }
 
       .filepond--drop-label {
-        @apply border border-border-light rounded-5 bg-white;
+        @apply border border-border-light rounded-5 bg-white dark:bg-sidebar-dark2  dark:border-border-dark dark:border;
 
         label {
-          @apply bg-white;
+          @apply bg-white dark:bg-sidebar-dark2;
 
           .filepond--label-action {
             @apply text-primary decoration-primary;
@@ -133,7 +132,7 @@
       }
 
       *:not(text) {
-        @apply bg-white;
+        @apply bg-white dark:bg-sidebar-dark2;
       }
 
       .filepond--list {
@@ -176,7 +175,7 @@
 
       .filepond--panel {
         &.filepond--panel-root {
-          @apply border border-border-light;
+          @apply border border-border-light dark:border-border-dark;
         }
       }
 
