--- a/assets/postcss/components/_form.css
+++ b/assets/postcss/components/_form.css
@@ -236,7 +236,7 @@
           @apply hidden;
         }
         &:after {
-          @apply bg-primary;
+          @apply bg-primary dark:bg-primary;
         }
       }
 
@@ -245,7 +245,7 @@
       }
 
       &:after {
-        @apply absolute content-[""] dark:bg-border-dark  left-full rtl:left-unset rtl:right-full bottom-1/2  h-[.125rem] w-[calc(57px_+_(227_-_57)_*_((100vw_-_320px)_/_(1920_-_320)))] md:w-[calc(65px_+_(581_-_65)_*_((100vw_-_320px)_/_(1920_-_320)))] 2xl:w-[calc(54px_+_(250_-_54)_*_((100vw_-_320px)_/_(1920_-_320)))] rtl:w-[calc(57px_+_(227_-_57)_*_((100vw_-_320px)_/_(1920_-_320)))] rtl:md:w-[calc(65px_+_(581_-_65)_*_((100vw_-_320px)_/_(1920_-_320)))] rtl:2xl:w-[calc(54px_+_(250_-_54)_*_((100vw_-_320px)_/_(1920_-_320)))] bg-title;
+        @apply absolute content-[""] dark:bg-border-dark dark:left-full rtl:left-unset rtl:right-full bottom-1/2  h-[.125rem] w-[calc(57px_+_(227_-_57)_*_((100vw_-_320px)_/_(1920_-_320)))] md:w-[calc(65px_+_(581_-_65)_*_((100vw_-_320px)_/_(1920_-_320)))] 2xl:w-[calc(54px_+_(250_-_54)_*_((100vw_-_320px)_/_(1920_-_320)))] rtl:w-[calc(57px_+_(227_-_57)_*_((100vw_-_320px)_/_(1920_-_320)))] rtl:md:w-[calc(65px_+_(581_-_65)_*_((100vw_-_320px)_/_(1920_-_320)))] rtl:2xl:w-[calc(54px_+_(250_-_54)_*_((100vw_-_320px)_/_(1920_-_320)))] bg-title;
       }
     }
     &:last-child {
