--- a/assets/postcss/components/_select-custom.css
+++ b/assets/postcss/components/_select-custom.css
@@ -6,7 +6,7 @@
     .select-selected {
       @apply pl-[0.875rem] capitalize pr-[1.75rem] py-[0.625rem] bg-gray-light dark:bg-sidebar-dark2 text-3xs font-bold rtl:pr-[0.875rem] rtl:pl-[1.75rem];
       &:after {
-        @apply rtl:left-[.625rem] rtl:right-unset;
+        @apply rtl:left-[.625rem] rtl:right-unset dark:border-border-light dark:border-t-4 dark:border-solid dark:border-4 dark:border-b-transparent dark:border-l-transparent dark:border-r-transparent;
       }
     }
     &.select-bg-transition {
@@ -17,7 +17,7 @@
       .select-selected {
         @apply after:border-t-white;
         &.select-arrow-active {
-          @apply after:border-b-white after:border-transparent;
+          @apply after:border-b-white  after:border-transparent;
         }
       }
       .select-items {
@@ -29,7 +29,7 @@
     &.select-bg-white {
       .select-selected,
       .select-items {
-        @apply bg-white;
+        @apply bg-white dark:bg-sidebar-dark2;
       }
     }
     .select-items {
