--- a/assets/pug/mixin/element-todo-app.pug
+++ b/assets/pug/mixin/element-todo-app.pug
@@ -29,7 +29,7 @@ mixin todo-left-sidebar(data)
 mixin todo-app-data(data)   
   ul.mb-7.todo-list.todo-app(class="gap-[calc(8px_+_(20_-_8)_*_((100vw_-_320px)_/_(1920_-_320)))]") 
     each item in TODO_APP_DATA  
-      li.todo-item.flex.items-center(class="gap-2 justify-between pt-[13px] mt-[13px] border-t border-light first:mt-0 first:pt-0 first:border-none") 
+      li.todo-item.flex.items-center(class="gap-2 justify-between pt-[13px] mt-[13px] border-t border-light dark:border-border-dark dark:border-t first:mt-0 first:pt-0 first:border-none") 
         div.flex.items-center.justify-center
           div.check-custom.flex.items-center.justify-center.relative(class="pl-[calc(10px_+_(15_-_10)_*_((100vw_-_320px)_/_(1920_-_320)))] pr-[calc(7px_+_(12_-_7)_*_((100vw_-_320px)_/_(1920_-_320)))] py-[3px]")
             span.absolute.top-0.bottom-0(class="ltr:left-0 rtl:right-0 w-[3px] line h-full rounded-5")
