--- a/assets/pug/pages/template/calendar.pug
+++ b/assets/pug/pages/template/calendar.pug
@@ -57,7 +57,7 @@ html(lang='en')
                         .fc-event-main(class="!text-primary") Meeting
                       .fc-event.fc-h-event.fc-daygrid-event.fc-daygrid-block-event.bg-secondary-extralight.p-3.text-sm.mb-3.border-0
                         .fc-event-main(class="!text-secondary") Event
-                      .fc-event.fc-h-event.fc-daygrid-event.fc-daygrid-block-event.bg-success-light.p-3.text-sm.mb-3.border-0
+                      .fc-event.fc-h-event.fc-daygrid-event.fc-daygrid-block-event.bg-success-light.p-3.text-sm.mb-3.border-0(class="dark:bg-sidebar-dark2")
                         .fc-event-main(class="!text-success") Birthday Party
                       .fc-event.fc-h-event.fc-daygrid-event.fc-daygrid-block-event.bg-warning-light.p-3.text-sm.mb-3.border-0
                         .fc-event-main(class="!text-warning") Holiday
@@ -69,7 +69,7 @@ html(lang='en')
                       p(for='drop-remove') Remove After Drop
                     h5.mt-5.mb-4.text-title.font-semibold My Schedule
                     div.flex.flex-col.gap-4
-                      div.card.shadow-sm.border-2.border-light(class="w-[230px] 3sm:w-[220px]") 
+                      div.card.shadow-sm.border-2.border-light(class="w-[230px] 3sm:w-[220px] dark:border-border-dark dark:border-2") 
                         div.card-body.flex.flex-col.gap-4
                           div
                             h4.text-xs.font-semibold Design Review 
@@ -78,7 +78,7 @@ html(lang='en')
                             button.btn.bg-primary-light.text-primary.text-2xs.font-semibold.rounded-none(class="p-2 xl:text-3xs") Online Meeting
                             button.btn.bg-secondary-extralight.text-secondary.text-2xs.font-semibold.rounded-none(class="p-2") Urgent
                         div.card-footer 
-                          div.flex.justify-between.items-center(class="pt-4 border-t border-dashed border-border-light")
+                          div.flex.justify-between.items-center(class="pt-4 border-t border-dashed border-border-light dark:border-border-dark dark:border-t")
                             div.flex.items-center.gap-2.w-full
                               div.avatar.rounded-full(class="w-10 h-10")
                                 img(src=`../../assets/images/user-app/15.png` alt=`user`)                                                      
