--- a/assets/pug/pages/template/cart.pug
+++ b/assets/pug/pages/template/cart.pug
@@ -47,11 +47,11 @@ html(lang='en')
                   div.flex.flex-col.gap-1(class="pb-4 border-b border-border-light dark:border-sidebar-dark2") 
                     label(for="coupon-code").font-bold.text-xs.text-primary Apply Coupon Code
                     div.flex.items-center.justify-center 
-                      input(type="text" placeholder="Enter code" class="p-[11px]" id="coupon-code").w-full.rounded-br-none.rounded-tr-none.border.border-border-light.rounded-5.text-xs.text-content(class="rtl:rounded-br-5 rtl:rounded-bl-none rtl:rounded-tr-5 rtl:rounded-tl-none")
+                      input(type="text" placeholder="Enter code" class="p-[11px] dark:bg-sidebar-dark2 dark:text-white dark:border-border-dark" id="coupon-code").w-full.rounded-br-none.rounded-tr-none.border.border-border-light.rounded-5.text-xs.text-content(class="rtl:rounded-br-5 rtl:rounded-bl-none rtl:rounded-tr-5 rtl:rounded-tl-none")
                       span.flex.items-center.justify-center.bg-primary.text-white.rounded-5.border-none.rounded-bl-none.rounded-tl-none.font-medium.text-xs(class="py-[12px] px-[11px] rtl:rounded-bl-5 rtl:rounded-br-none rtl:rounded-tr-none rtl:rounded-tl-5") Apply
                   ul.flex.flex-col.gap-2(class="py-1 pb-4 border-b border-border-light dark:border-sidebar-dark2")
                     li.flex.items-center.justify-between.text-content.font-bold
-                      h6 Subtotal  
+                      h6 Subtotal
                       h6 $511 
                     li.flex.items-center.justify-between.text-secondary.font-bold
                       h6 Coupon Discount
