--- a/html/template/blog-detail.html
+++ b/html/template/blog-detail.html
@@ -1007,16 +1007,16 @@
                 <div class="card-header border-b-0">
                   <button class="justify-end hidden mb-3 lg:flex left-sidebar-toggle absolute right-[-50px] top-[-16px] bg-gray-light p-2 ">  <i class="w-5 h-5 stroke-title" data-feather="x"></i></button>
                   <div class="search-box relative">
-                    <input class="rounded-full bg-gray-light w-full py-[.6875rem] pl-[1.5625rem] pr-[3.4375rem] text-xs font-semibold text-title" placeholder="Type to Search..." type="search">
-                    <svg class="w-6 h-6 stroke-title top-1/2 -translate-y-1/2 right-[1.5625rem] absolute"> 
+                    <input class="rounded-full bg-gray-light dark:bg-sidebar-dark2 dark:text-white w-full py-[.6875rem] pl-[1.5625rem] pr-[3.4375rem] text-xs font-semibold text-title" placeholder="Type to Search..." type="search">
+                    <svg class="w-6 h-6 stroke-title dark:stroke-white top-1/2 -translate-y-1/2 right-[1.5625rem] absolute"> 
                       <use href="../../assets/svg/sprite.svg#Search"> </use>
                     </svg>
                   </div>
                 </div>
                 <div class="card-body flex flex-col gap-card-space">                                 
-                  <div class="p-3 border first:rounded-tl-none border-light rounded-5">
-                    <h2 class="mb-4 font-bold">Categories</h2>
-                    <ul class="flex flex-col gap-2"> 
+                  <div class="p-3 border first:rounded-tl-none border-light dark:border-border-dark rounded-5">
+                    <h2 class="mb-4 font-bold dark:text-white">Categories</h2>
+                    <ul class="flex flex-col gap-2">
                       <li class="flex items-center justify-between p-2 text-xs text-content rounded-5 group hover:bg-primary"> <a class="group-hover:text-white" href="blog-grid.html"> Web designer Jobs</a><span class="group-hover:text-white text-content">39   </span></li>
                       <li class="flex items-center justify-between p-2 text-xs text-content rounded-5 group hover:bg-primary"> <a class="group-hover:text-white" href="blog-grid.html"> Engineering Jobs </a><span class="group-hover:text-white text-content">25</span></li>
                       <li class="flex items-center justify-between p-2 text-xs text-content rounded-5 group hover:bg-primary"> <a class="group-hover:text-white" href="blog-grid.html"> Mainframe Jobs </a><span class="group-hover:text-white text-content">15</span></li>
@@ -1026,20 +1026,20 @@
                       <li class="flex items-center justify-between p-2 text-xs text-content rounded-5 group hover:bg-primary"> <a class="group-hover:text-white" href="blog-grid.html">PSL Jobs </a><span class="group-hover:text-white text-content">54 </span></li>
                     </ul>
                   </div>
-                  <div class="p-3 border first:rounded-tl-none border-light rounded-5">
-                    <h2 class="mb-4 font-bold">Tags</h2>
+                  <div class="p-3 border first:rounded-tl-none border-light dark:border-border-dark rounded-5">
+                    <h2 class="mb-4 font-bold dark:text-white">Tags</h2>
                     <div class="flex flex-wrap gap-3">
-                      <button class="btn btn-outline btn-primary btn-sm text-primary">#jobs </button>
-                      <button class="btn btn-outline btn-secondary btn-sm text-secondary">#business</button>
-                      <button class="btn btn-outline btn-success btn-sm text-success">#work   </button>
-                      <button class="btn btn-outline btn-secondary btn-sm text-secondary">#career</button>
-                      <button class="btn btn-outline btn-primary btn-sm text-primary">#hiring </button>
-                      <button class="btn btn-outline btn-secondary btn-sm text-secondary">#photography</button>
-                      <button class="btn btn-outline btn-success btn-sm text-success">#jobSearch</button>
+                      <button class="dark:bg-sidebar-dark2 btn btn-outline btn-primary btn-sm text-primary">#jobs </button>
+                      <button class="dark:bg-sidebar-dark2 btn btn-outline btn-secondary btn-sm text-secondary">#business</button>
+                      <button class="dark:bg-sidebar-dark2 btn btn-outline btn-success btn-sm text-success">#work   </button>
+                      <button class="dark:bg-sidebar-dark2 btn btn-outline btn-secondary btn-sm text-secondary">#career</button>
+                      <button class="dark:bg-sidebar-dark2 btn btn-outline btn-primary btn-sm text-primary">#hiring </button>
+                      <button class="dark:bg-sidebar-dark2 btn btn-outline btn-secondary btn-sm text-secondary">#photography</button>
+                      <button class="dark:bg-sidebar-dark2 btn btn-outline btn-success btn-sm text-success">#jobSearch</button>
                     </div>
                   </div>
-                  <div class="p-3 border first:rounded-tl-none border-light rounded-5">
-                    <h2 class="mb-4 font-bold">Latest Blogs</h2>
+                  <div class="p-3 border first:rounded-tl-none border-light dark:border-border-dark rounded-5">
+                    <h2 class="mb-4 font-bold dark:text-white">Latest Blogs</h2>
                     <ul class="flex flex-col gap-1"> 
                       <li class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none">                                <a class="flex items-center gap-3 w-[calc(100%_-_0rem)] xl:gap-2" href="blog-grid.html"> 
                           <div class="avatar"> 
@@ -1071,13 +1071,13 @@
                           </div></a></li>
                     </ul>
                   </div>
-                  <div class="p-3 border first:rounded-tl-none border-light rounded-5">
+                  <div class="p-3 border first:rounded-tl-none border-light dark:border-border-dark rounded-5">
                     <div class="mb-[1.125rem]">
-                      <h2 class="mb-2 font-bold">Subscriber</h2>
+                      <h2 class="mb-2 font-bold dark:text-white">Subscriber</h2>
                       <p class="text-xs text-content">" To get more detail for new types of blogs "</p>
                     </div>
                     <form class="m-0 theme-form">
-                      <input type="email" id="Email" placeholder="Enter your email" Name="Email" required>
+                      <input class="dark:bg-sidebar-dark2 dark:text-white" type="email" id="Email" placeholder="Enter your email" Name="Email" required>
                       <button class="w-full lg:!w-auto p-2 !mb-0 text-white rounded bg-primary hover:drop-shadow-lg">Get Started</button>
                     </form>
                   </div>
@@ -1092,7 +1092,7 @@
                         <svg class="w-5 h-5 stroke-title cursor-pointer hover:stroke-primary ml-auto left-sidebar-toggle-btn lg:block hidden"> 
                           <use href="../../assets/svg/sprite.svg#Category"> </use>
                         </svg></span></div>
-                    <div class="card-body">
+                    <div class="card-body"> 
                       <div class="bg-white rounded-lg"><img class="rounded-t-lg" src="../../assets/images/blog/blog-details.svg" alt="blog-details.svg"></div>
                       <h2 class="font-bold mb-3">Floyd L. Mitchell</h2>
                       <p class="text-content md:line-clamp-2 mb-3">Machines to craft the Geminis DK. Not only his overall appearance was inspired, but his behavior and even the way he shrugs were also fed to the robot, and Scharfe also donated the strands of his own hair to be used in the Geminoid wig. This bot is very realistic as people tend to be mistaken for the person designed to look alike. The main purpose of this creation is to make the humanoid look completely like a human.</p>
@@ -1164,13 +1164,13 @@
                   <form class="m-0 theme-form" action="index.html">
                     <div class="flex gap-3 md:flex-col mb-[.75rem]">
                       <div class="w-full">
-                        <input class="rounded" type="text" id="Name" placeholder="Enter your name.." name="name" required>
+                        <input class="rounded dark:bg-sidebar-dark2 dark:text-white" type="text" id="Name" placeholder="Enter your name.." name="name" required>
                       </div>
                       <div class="w-full">
-                        <input class="rounded" type="Name" id="Name" placeholder="Enter your id.." name="Email" required>
+                        <input class="rounded dark:bg-sidebar-dark2 dark:text-white" type="Name" id="Name" placeholder="Enter your id.." name="Email" required>
                       </div>
                     </div>
-                    <input class="rounded" type="text" id="Comment" placeholder="Enter your message.." name="" required>
+                    <input class="rounded dark:bg-sidebar-dark2 dark:text-white" type="text" id="Comment" placeholder="Enter your message.." name="" required>
                     <button class="!w-auto p-2 text-white rounded bg-primary hover:drop-shadow-lg !mb-0">Post Comment</button>
                   </form>
                 </div>
