--- a/html/template/blog-grid.html
+++ b/html/template/blog-grid.html
@@ -1007,15 +1007,15 @@
                 <div class="card-header border-b-0">
                   <button class="justify-end hidden mb-3 lg:flex left-sidebar-toggle absolute right-[-50px] top-[-16px] bg-gray-light p-2 ">  <i class="w-5 h-5 stroke-title" data-feather="x"></i></button>
                   <div class="search-box relative">
-                    <input class="rounded-full bg-gray-light w-full py-[.6875rem] pl-[1.5625rem] pr-[3.4375rem] text-xs font-semibold text-title" placeholder="Type to Search..." type="search">
-                    <svg class="w-6 h-6 stroke-title top-1/2 -translate-y-1/2 right-[1.5625rem] absolute"> 
+                    <input class="rounded-full bg-gray-light dark:bg-sidebar-dark2 dark:text-white w-full py-[.6875rem] pl-[1.5625rem] pr-[3.4375rem] text-xs font-semibold text-title" placeholder="Type to Search..." type="search">
+                    <svg class="w-6 h-6 stroke-title dark:stroke-white top-1/2 -translate-y-1/2 right-[1.5625rem] absolute"> 
                       <use href="../../assets/svg/sprite.svg#Search"> </use>
                     </svg>
                   </div>
                 </div>
-                <div class="card-body flex flex-col gap-card-space">                                 
-                  <div class="p-3 border first:rounded-tl-none border-light rounded-5">
-                    <h2 class="mb-4 font-bold">Categories</h2>
+                <div class="card-body flex flex-col gap-card-space">                              
+                  <div class="p-3 border first:rounded-tl-none border-light dark:border-border-dark rounded-5">
+                    <h2 class="mb-4 font-bold dark:text-white">Categories</h2>
                     <ul class="flex flex-col gap-2"> 
                       <li class="flex items-center justify-between p-2 text-xs text-content rounded-5 group hover:bg-primary"> <a class="group-hover:text-white" href="blog-grid.html"> Web designer Jobs</a><span class="group-hover:text-white text-content">39   </span></li>
                       <li class="flex items-center justify-between p-2 text-xs text-content rounded-5 group hover:bg-primary"> <a class="group-hover:text-white" href="blog-grid.html"> Engineering Jobs </a><span class="group-hover:text-white text-content">25</span></li>
@@ -1026,20 +1026,20 @@
                       <li class="flex items-center justify-between p-2 text-xs text-content rounded-5 group hover:bg-primary"> <a class="group-hover:text-white" href="blog-grid.html">PSL Jobs </a><span class="group-hover:text-white text-content">54 </span></li>
                     </ul>
                   </div>
-                  <div class="p-3 border first:rounded-tl-none border-light rounded-5">
-                    <h2 class="mb-4 font-bold">Tags</h2>
+                  <div class="p-3 border first:rounded-tl-none border-light dark:border-border-dark rounded-5">
+                    <h2 class="mb-4 font-bold dark:text-white">Tags</h2>
                     <div class="flex flex-wrap gap-3">
-                      <button class="btn btn-outline btn-primary btn-sm text-primary">#jobs </button>
-                      <button class="btn btn-outline btn-secondary btn-sm text-secondary">#business</button>
-                      <button class="btn btn-outline btn-success btn-sm text-success">#work   </button>
-                      <button class="btn btn-outline btn-secondary btn-sm text-secondary">#career</button>
-                      <button class="btn btn-outline btn-primary btn-sm text-primary">#hiring </button>
-                      <button class="btn btn-outline btn-secondary btn-sm text-secondary">#photography</button>
-                      <button class="btn btn-outline btn-success btn-sm text-success">#jobSearch</button>
+                      <button class="dark:bg-sidebar-dark2 btn btn-outline btn-primary btn-sm text-primary">#jobs </button>
+                      <button class="dark:bg-sidebar-dark2 btn btn-outline btn-secondary btn-sm text-secondary">#business</button>
+                      <button class="dark:bg-sidebar-dark2 btn btn-outline btn-success btn-sm text-success">#work</button>
+                      <button class="dark:bg-sidebar-dark2 btn btn-outline btn-secondary btn-sm text-secondary">#career</button>
+                      <button class="dark:bg-sidebar-dark2 btn btn-outline btn-primary btn-sm text-primary">#hiring </button>
+                      <button class="dark:bg-sidebar-dark2 btn btn-outline btn-secondary btn-sm text-secondary">#photography</button>
+                      <button class="dark:bg-sidebar-dark2 btn btn-outline btn-success btn-sm text-success">#jobSearch</button>
                     </div>
                   </div>
-                  <div class="p-3 border first:rounded-tl-none border-light rounded-5">
-                    <h2 class="mb-4 font-bold">Latest Blogs</h2>
+                  <div class="p-3 border first:rounded-tl-none border-light dark:border-border-dark rounded-5">
+                    <h2 class="mb-4 font-bold dark:text-white">Latest Blogs</h2>
                     <ul class="flex flex-col gap-1"> 
                       <li class=" pt-[.8125rem]  first:pt-0 first:mt-0 first:border-none">                                <a class="flex items-center gap-3 w-[calc(100%_-_0rem)] xl:gap-2" href="blog-grid.html"> 
                           <div class="avatar"> 
@@ -1071,13 +1071,13 @@
                           </div></a></li>
                     </ul>
                   </div>
-                  <div class="p-3 border first:rounded-tl-none border-light rounded-5">
+                  <div class="p-3 border first:rounded-tl-none dark:border-border-dark border-light rounded-5">
                     <div class="mb-[1.125rem]">
-                      <h2 class="mb-2 font-bold">Subscriber</h2>
+                      <h2 class="mb-2 font-bold dark:text-white">Subscriber</h2>
                       <p class="text-xs text-content">" To get more detail for new types of blogs "</p>
                     </div>
-                    <form class="m-0 theme-form">
-                      <input type="email" id="Email" placeholder="Enter your email" Name="Email" required>
+                    <form class="m-0 theme-form"> 
+                      <input class="dark:bg-sidebar-dark2 dark:text-white" type="email" id="Email" placeholder="Enter your email" Name="Email" required>
                       <button class="w-full lg:!w-auto p-2 !mb-0 text-white rounded bg-primary hover:drop-shadow-lg">Get Started</button>
                     </form>
                   </div>
@@ -1106,17 +1106,17 @@
                                 <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/20.jpg" alt="avatar"></div>
                               </div>
                               <div><a href="blog-grid.html">
-                                  <p class="text-title font-bold">Mitchel P. Lawyer</p></a><span class="text-content">Feb 6,2023</span></div>
+                                  <p class="text-title font-bold dark:text-white">Mitchel P. Lawyer</p></a><span class="text-content">Feb 6,2023</span></div>
                             </div><i class="h-5 stroke-content" data-feather="more-vertical"></i>
                           </div>
                           <div>
-                            <h5 class="mb-2 font-bold">Cracking The Code </h5>
+                            <h5 class="mb-2 font-bold dark:text-white">Cracking The Code </h5>
                             <p class="text-content">
                               Lining hemline knee burgundy satin finish concealed small buttons rayon. Wardrobe stylish fitted long sleeves pleats the  <a class="text-secondary hover:underline decoration-1" href="blog-detail.html">Read more...</a></p>
                           </div>
                           <div>
                             <div class="divider w-full"></div>
-                            <div class="flex items-center justify-between mt post-media"><span class="text-content">8k views</span><i class="h-5 stroke-secondary wish-like" data-feather="heart"></i></div>
+                            <div class="flex items-center justify-between mt-3 post-media"><span class="text-content">8k views</span><i class="h-5 stroke-secondary wish-like" data-feather="heart"></i></div>
                           </div>
                         </div>
                       </div>
@@ -1131,11 +1131,11 @@
                                 <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/21.jpg" alt="avatar"></div>
                               </div>
                               <div><a href="blog-grid.html">
-                                  <p class="text-title font-bold">Amy A. Servants</p></a><span class="text-content">Feb 2,2023</span></div>
+                                  <p class="text-title font-bold dark:text-white">Amy A. Servants</p></a><span class="text-content">Feb 2,2023</span></div>
                             </div><i class="h-5 stroke-content" data-feather="more-vertical"></i>
                           </div>
-                          <div> 
-                            <h5 class="mb-2 font-bold">Take The Stress Out Of Code</h5>
+                          <div>
+                            <h5 class="mb-2 font-bold dark:text-white">Take The Stress Out Of Code</h5>
                             <p class="text-content">
                               This could be used to hide someone's trueinvasion of the Soviet Union was given the code name of Barbarossa  <a class="text-secondary hover:underline decoration-1" href="blog-detail.html">Read more...</a></p>
                           </div>
@@ -1156,11 +1156,11 @@
                                 <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/38.jpg" alt="avatar"></div>
                               </div>
                               <div><a href="blog-grid.html">
-                                  <p class="text-title font-bold">Keith K. Levitt </p></a><span class="text-content">Jan 30,2023</span></div>
+                                  <p class="text-title font-bold dark:text-white">Keith K. Levitt </p></a><span class="text-content">Jan 30,2023</span></div>
                             </div><i class="h-5 stroke-content" data-feather="more-vertical"></i>
                           </div>
                           <div> 
-                            <h5 class="mb-2 font-bold">Why I Hate</h5>
+                            <h5 class="mb-2 font-bold dark:text-white">Why I Hate</h5>
                             <p class="text-content">
                               We’ll show you how Duads BI lets you use all ofconnections to inject data into R and then visualize and interact with the   <a class="text-secondary hover:underline decoration-1" href="blog-detail.html">Read more...</a></p>
                           </div>
@@ -1181,11 +1181,11 @@
                                 <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/20.jpg" alt="avatar"></div>
                               </div>
                               <div><a href="blog-grid.html">
-                                  <p class="text-title font-bold">Mitchel P. Lawyer  </p></a><span class="text-content">Jan 25,2023  </span></div>
+                                  <p class="text-title font-bold dark:text-white">Mitchel P. Lawyer  </p></a><span class="text-content">Jan 25,2023  </span></div>
                             </div><i class="h-5 stroke-content" data-feather="more-vertical"></i>
                           </div>
                           <div> 
-                            <h5 class="mb-2 font-bold">Take The Stress Out Of Code</h5>
+                            <h5 class="mb-2 font-bold dark:text-white">Take The Stress Out Of Code</h5>
                             <p class="text-content">
                                We’ll show you how Duads BI lets you use all ofconnections to inject data into R and then visualize and interact with the<a class="text-secondary hover:underline decoration-1" href="blog-detail.html">Read more...</a></p>
                           </div>
@@ -1206,11 +1206,11 @@
                                 <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/21.jpg" alt="avatar"></div>
                               </div>
                               <div><a href="blog-grid.html">
-                                  <p class="text-title font-bold">Katherine W. McWilliams  </p></a><span class="text-content">Jan 5,2023</span></div>
+                                  <p class="text-title font-bold dark:text-white">Katherine W. McWilliams  </p></a><span class="text-content">Jan 5,2023</span></div>
                             </div><i class="h-5 stroke-content" data-feather="more-vertical"></i>
                           </div>
                           <div> 
-                            <h5 class="mb-2 font-bold">The Death Of Avoid It Code </h5>
+                            <h5 class="mb-2 font-bold dark:text-white">The Death Of Avoid It Code </h5>
                             <p class="text-content">
                                Are you wondering how to get a text short code and get started with reaching your customers in new SMS into your short steps.  <a class="text-secondary hover:underline decoration-1" href="blog-detail.html">Read more...</a></p>
                           </div>
@@ -1231,11 +1231,11 @@
                                 <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/38.jpg" alt="avatar"></div>
                               </div>
                               <div><a href="blog-grid.html">
-                                  <p class="text-title font-bold">Mitchel P. Lawyer  </p></a><span class="text-content">Jan 1,2023</span></div>
+                                  <p class="text-title font-bold dark:text-white">Mitchel P. Lawyer  </p></a><span class="text-content">Jan 1,2023</span></div>
                             </div><i class="h-5 stroke-content" data-feather="more-vertical"></i>
                           </div>
                           <div> 
-                            <h5 class="mb-2 font-bold">The Biggest Lie In The Code </h5>
+                            <h5 class="mb-2 font-bold dark:text-white">The Biggest Lie In The Code </h5>
                             <p class="text-content">
                                I think programming plays a huge role in our lives,and every kid should definitely be taught programming at some point during their education <a class="text-secondary hover:underline decoration-1" href="blog-detail.html">Read more...</a></p>
                           </div>
@@ -1256,11 +1256,11 @@
                                 <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/20.jpg" alt="avatar"></div>
                               </div>
                               <div><a href="blog-grid.html">
-                                  <p class="text-title font-bold">Anna G. Proas  </p></a><span class="text-content">Dec 31, 2022</span></div>
+                                  <p class="text-title font-bold dark:text-white">Anna G. Proas  </p></a><span class="text-content">Dec 31, 2022</span></div>
                             </div><i class="h-5 stroke-content" data-feather="more-vertical"></i>
                           </div>
                           <div> 
-                            <h5 class="mb-2 font-bold">Old School Coded </h5>
+                            <h5 class="mb-2 font-bold dark:text-white">Old School Coded </h5>
                             <p class="text-content">
                                In particular I learned about our mental and physical limits,the nature of stress and anxiety, and most importantly, how to take care of myself so that I could stop this happening again.<a class="text-secondary hover:underline decoration-1" href="blog-detail.html">Read more...</a></p>
                           </div>
@@ -1278,14 +1278,14 @@
                           <div class="flex justify-between items-center">
                             <div class="flex items-start justify-between gap-2 items-center pt-[13px] first:pt-0 first:mt-0 first:border-none">
                               <div class="avatar"> 
-                                <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/21.jpg" alt="avatar"></div>
+                                <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/26.jpg" alt="avatar"></div>
                               </div>
                               <div><a href="blog-grid.html">
-                                  <p class="text-title font-bold">Ronald M. Spelean  </p></a><span class="text-content">Dec 27, 2022 </span></div>
+                                  <p class="text-title font-bold dark:text-white">Ronald M. Spelean  </p></a><span class="text-content">Dec 27, 2022 </span></div>
                             </div><i class="h-5 stroke-content" data-feather="more-vertical"></i>
                           </div>
                           <div> 
-                            <h5 class="mb-2 font-bold">Take The Stress Out Of Code </h5>
+                            <h5 class="mb-2 font-bold dark:text-white">Take The Stress Out Of Code </h5>
                             <p class="text-content">
                                Complexity can often come through making the quick fix, taking the shortcut and creating technical debt. Technical debt is another name for complexity because technical debt makes code  and more difficult to work with.  <a class="text-secondary hover:underline decoration-1" href="blog-detail.html">Read more...</a></p>
                           </div>
@@ -1306,11 +1306,11 @@
                                 <div class="w-10 rounded-full h-10 xl:h-9 xl:w-9"><img src="../../assets/images/avatar/38.jpg" alt="avatar"></div>
                               </div>
                               <div><a href="blog-grid.html">
-                                  <p class="text-title font-bold">Shannon T. Clemons    </p></a><span class="text-content">Dec 5, 2022</span></div>
+                                  <p class="text-title font-bold dark:text-white">Shannon T. Clemons    </p></a><span class="text-content">Dec 5, 2022</span></div>
                             </div><i class="h-5 stroke-content" data-feather="more-vertical"></i>
                           </div>
                           <div> 
-                            <h5 class="mb-2 font-bold">Myths About Code</h5>
+                            <h5 class="mb-2 font-bold dark:text-white">Myths About Code</h5>
                             <p class="text-content">
                                No! All of the paragraphs in the  are written by humans,not computers. thought about using computers to generate the paragraphs, but they weren't very. <a class="text-secondary hover:underline decoration-1" href="blog-detail.html">Read more...</a></p>
                           </div>
